--- a/package.json
+++ b/package.json
@@ -21,14 +21,19 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.3.0",
     "@eslint/eslintrc": "^3",
-    "@stagewise/toolbar": "^0.4.8",
+    "@eslint/js": "^9.29.0",
+    "@stagewise/toolbar-next": "^0.4.8",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@wonse/eslint-react": "^5.0.0",
+    "eslint": "^9.29.0",
     "eslint-config-next": "15.3.4",
+    "eslint-plugin-react": "^7.37.5",
+    "prettier": "^3.6.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
